--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "devDependencies": {
     "browser-sync": "^2.27.5",
     "gulp": "^4.0.2",
-    "sass": "^1.38.2",
-    "gulp-sass": "^5.0.0"
+    "gulp-sass": "^5.0.0",
+    "sass": "^1.38.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "minireset.css": "^0.0.7"
+  }
 }
